--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,12 @@ en:
     index:
       title: All questions
       new_question: New question
+    show:
+      title: Question info
+      leave_answer: Leave an answer...
+      leave_comment: Leave a comment...
+      answers: Answers
+      rating: Rating
     new:
       title: New question
       question_title: Title
@@ -62,6 +68,30 @@ en:
       alert: Something went wrong
     destroy:
       success: Question was successfully deleted!
+    require_same_user:
+      alert: You can only edit or delete your own questions
+  answers:
+    create:
+      success: Answer was successfully added to the question!
+      alert: Something went wrong
+    update:
+      success: Answer was successfully updated!
+      alert: Something went wrong
+    destroy:
+      success: Answer was successfully deleted!
+    require_same_user:
+      alert: You can only edit or delete your own answers
+  comments:
+    create:
+      success: Comment was successfully added
+      alert: Something went wrong
+    update:
+      success: Comment was successfully updated!
+      alert: Something went wrong
+    destroy:
+      success: Comment was successfully deleted!
+    require_same_user:
+      alert: You can only edit or delete your own comments
   navbar:
     home: Home
     questions: Questions
@@ -72,3 +102,15 @@ en:
   pages:
     index:
       title: Welcome to AskIt!
+  global:
+    button:
+      delete: Delete
+      edit: Edit
+      update: Update
+      create: Create
+      cancel: Cancel
+      reply: Reply
+      enter: Enter
+      show: Show
+    dialog:
+      you_sure: Are you sure?
