--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -91,9 +91,15 @@ ru:
       success: Подписка на категорию отменена!
       alert: Что-то пошло не так
   user_mailer:
+    notify_subscriber:
+      subject: Новый вопрос в категории %{name}!
+      greeting: Приветствую, %{name}!
+      content_1: 'Появился новый вопрос в категории %{name}! Заходи и смотри:'
+      content_2: 'Посмортеть все вопросы в категории %{name}:'
+      farewell: Спасибо, что остаетесь с нами, хорошего дня!
     notify_new_reply:
       subject: Вам ответили!
-      greeting: Приветствую, %{name}
+      greeting: Приветствую, %{name}!
       content: 'Пользователь %{name} ответил Вам в обсуждении вопроса:'
       farewell: Спасибо, что остаетесь с нами, хорошего дня!
   navbar:
