add link to edit profile in navbar, close button for flash messages in devise

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,6 +91,7 @@ en:
     sign_in: Sign In
     sign_up: Sign Up
     sign_out: Sign Out
+    edit_profile: Edit profile
   pages:
     index:
       title: Welcome to AskIt!
