add validation category presence for question model, select box for choosing multiple categories in new question view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,7 +43,7 @@ en:
       title: New question
       question_title: Title
       question_body: Body
-      categories_prompt: Choose category from the listed below
+      categories_prompt: Choose categories from the listed below
     create:
       success: Question was successfully created!
       alert: Something went wrong
