--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,7 +56,7 @@ ru:
       success: Вопрос успешно удален!
     require_same_user:
       alert: Вы можете редактировать и удалять только свои вопросы
-  replies:
+  answers:
     create:
       success: Ответ успешно добавлен!
       alert: Что-то пошло не так
@@ -65,6 +65,15 @@ ru:
       alert: Что-то пошло не так
     destroy:
       success: Ответ успешно удален!
+  comments:
+    create:
+      success: Комментарий успешно добавлен!
+      alert: Что-то пошло не так
+    update:
+      success: Комментарий успешно отредатикрован!
+      alert: Что-то пошло не так
+    destroy:
+      success: Комментарий успешно удален!
   subscriptions:
     create:
       success: Подписка на категорию оформлена!
