--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,7 +55,7 @@ ru:
     destroy:
       success: Вопрос успешно удален!
     require_same_user:
-      alert: Вы можете редактировать и удалять только свои вопросы
+      alert: Вы можете редактировать и удалять только свои вопросы!
   answers:
     create:
       success: Ответ успешно добавлен!
@@ -65,6 +65,8 @@ ru:
       alert: Что-то пошло не так
     destroy:
       success: Ответ успешно удален!
+    require_same_user:
+      alert: Вы можете редактировать и удалять только свои ответы!
   comments:
     create:
       success: Комментарий успешно добавлен!
@@ -74,6 +76,8 @@ ru:
       alert: Что-то пошло не так
     destroy:
       success: Комментарий успешно удален!
+    require_same_user:
+      alert: Вы можете редактировать и удалять только свои комментарии!
   subscriptions:
     create:
       success: Подписка на категорию оформлена!
