create next_page partial and use it for categories, answers, questions pagination

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,6 +135,9 @@ en:
   pages:
     index:
       title: Welcome to AskIt!
+  shared:
+    next_page:
+      loading: Loading...
   global:
     button:
       delete: Delete
