--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -21,7 +21,7 @@ ru:
     edit:
       title: Редактировать профиль
       update: Обновить
-      cancel_account: Удалить учетную запись.
+      cancel_account: Удалить данную учетную запись.
     destroy:
       success: Пользователь успешно удален
       alert: Что-то пошло не так
