add button to administration page in navigation bar for admin users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,6 +136,8 @@ en:
     sign_up: Sign Up
     sign_out: Sign Out
     edit_profile: Edit profile
+    administration: Administration
+    admin: Admin
   pages:
     index:
       title: Welcome to AskIt!
