--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -136,6 +136,8 @@ ru:
     sign_up: Регистрация
     sign_out: Выход
     edit_profile: Редактировать профиль
+    administration: Администрирование
+    admin: Администратор
   pages:
     index:
       title: Добро пожаловать на AskIt!
